--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,3 +29,10 @@ services:
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
       KAFKA_JMX_PORT: 9101
       KAFKA_JMX_HOSTNAME: localhost
+  
+  consumer:
+    build: .
+    ports:
+      - "29092:29092"
+      - "9092:9092"
+      - "9101:9101"
