--- a/consume/Dockerfile
+++ b/consume/Dockerfile
@@ -5,4 +5,4 @@ COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 EXPOSE 9092
 COPY . .
-CMD ["python"]
+CMD ["python", "./"]
