--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,7 +31,14 @@ services:
       KAFKA_JMX_HOSTNAME: localhost
   
   consumer:
-    build: .
+    build: ./consume
+    ports:
+      - "29092:29092"
+      - "9092:9092"
+      - "9101:9101"
+
+  producer:
+    build: ./produce
     ports:
       - "29092:29092"
       - "9092:9092"
