--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,12 +30,12 @@ services:
       KAFKA_JMX_PORT: 9101
       KAFKA_JMX_HOSTNAME: localhost
   
-  consumer:
-    build: ./consume
-    ports:
-      - "29092:29092"
-      - "9092:9092"
-      - "9101:9101"
+  # consumer:
+  #   build: ./consume
+  #   ports:
+  #     - "29092:29092"
+  #     - "9092:9092"
+  #     - "9101:9101"
 
   producer:
     build: ./produce
