--- a/produce/Dockerfile
+++ b/produce/Dockerfile
@@ -6,4 +6,4 @@ COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 EXPOSE 9092
 COPY . .
-CMD ["python", "./"]
+CMD ["python", "./produce/producer.py"]
