--- a/consume/Dockerfile
+++ b/consume/Dockerfile
@@ -1,9 +1,15 @@
 FROM python:3.7-alpine
-RUN pwd
-WORKDIR ./consume
+RUN apt-get update && \
+  apt-get install -y --no-install-recommends gcc git libssl-dev g++ make && \
+  cd /tmp && git clone https://github.com/edenhill/librdkafka.git && \
+  cd librdkafka && git checkout tags/v1.9.0 && \
+  ./configure && make && make install && \
+  cd ../ && rm -rf librdkafka
+WORKDIR /
 RUN apk add --no-cache gcc musl-dev linux-headers
 COPY requirements.txt requirements.txt
-RUN pip3 install -r requirements.txt
+RUN python -m pip install --no-binary confluent-kafka confluent-kafka
+RUN pip install Faker
 EXPOSE 9092
 COPY . .
 CMD ["python", "./"]
