--- a/consume/Dockerfile
+++ b/consume/Dockerfile
@@ -5,4 +5,4 @@ RUN cd librdkafka && ./configure && make && make install && ldconfig
 RUN pip install confluent-kafka
 RUN pip install Faker
 COPY consumer.py /
-CMD ["python", "/consumer.py"]
+CMD ["python", "-u", "/consumer.py"]
